light/dark mode added / colors fixed

--- a/cubestyles.css
+++ b/cubestyles.css
@@ -168,11 +168,12 @@ Button {
     color: white;
     border: none;
     border-radius: 5px;
+    margin-right: 10px;
     cursor: pointer;
 }
 
 button:hover {
-    background-color: #555;
+    background-color: #404040;
 }
 
 .darkMode .face {
@@ -201,20 +202,8 @@ button:hover {
 }
 
 .darkMode button:hover {
-    background-color: #555;
+    background-color: #404040;
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
